Working vertion of project

--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -19,7 +19,9 @@
             </li>
           </ul>      
           <p> {{ post.text }} </p>
-          <a href="{% url 'posts:var_group_list.html' %}">все записи группы</a>
+          {% if post.group %}
+          <a href="{% url 'posts:group_slug' post.group.slug %}">все записи группы</a>
+          {% endif %}
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
         </article>
