--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -10,7 +10,7 @@
           Группа тайных поклонников графа.
         </p>
         <article>
-          {%for group in group %}
+          {%for post in posts %}
           <ul>
             <li>
               Автор: {{ post.author.get_full_name }}
@@ -20,9 +20,7 @@
             </li>
           </ul>      
           <p> {{ post.text }} </p>
-          {% if post.group %}
-            <a href="{% url 'posts:var_group_list.html' post.group.slug %}">все записи группы</a>
-          {% endif %}
+
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
         </article>
