--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-  Последние обновления на сайте (title)
+  Последние обновления на сайте
 {% endblock %} 
 {% block content %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
@@ -9,7 +9,7 @@
       <div class="container">        
         <h1>Последние обновления на сайте</h1>
         <article>
-          {%for post in posts %}
+          {%for post in page_obj %}
           <ul>
             <li>
               Автор: {{ post.author.get_full_name }}
@@ -25,7 +25,9 @@
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
         </article>
+
         
+        {% include 'posts/includes/paginator.html' %}
         <!-- под последним постом нет линии -->
       </div>  
 {% endblock %}
