Corrections of funtions

--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -1,3 +1,5 @@
 <footer class="border-top text-center py-3">
-  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>    
+  {# где key_year - ключ словаря, который возвращает функция, #}
+   {# подключенная из settings core.context_processors.year.get_year #}
+  <p>© {{ key_year }} Copyright <span style="color:red">Ya</span>tube</p>    
 </footer> 
