--- a/yatube/templates/posts/includes/paginator.html
+++ b/yatube/templates/posts/includes/paginator.html
@@ -1,6 +1,7 @@
 {# templates/posts/includes/paginator.html #}
 
 {% comment %}
+Урок 4.4.2
 Отрисовываем навигацию паджинатора только если
 все посты не помещаются на первую страницу
 {% endcomment %}
@@ -41,4 +42,3 @@
   </ul>
 </nav>
 {% endif %}
- 
