--- a/yatube/templates/users/logged_out.html
+++ b/yatube/templates/users/logged_out.html
@@ -1,8 +1,8 @@
-
+{# Это код файла templates/users/logged_out.html #}
 
 {% extends 'base.html' %}
 {% block title %}Вы вышли из системы{% endblock %}
-{% block content %}
+{% block content %}{# base.html подтягивает блок content от сюда #}
 <div class="row justify-content-center">
   <div class="col-md-8 p-5">
     <div class="card">
@@ -17,5 +17,4 @@
     </div> <!-- card -->
   </div> <!-- col -->
 </div> <!-- row -->
-{% endblock %}
-
+{% endblock %} 
