--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -1,66 +1,55 @@
-{# Загрузили переменную static #}
 {% load static %}
 
-      <header>
-        <nav class="navbar navbar-light" style="background-color: lightskyblue">
-          <div class="container">
-            <a class="navbar-brand" href="{% url 'posts:var_main_page' %}">
-              <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
-              <span style="color:red">Ya</span>tube
-            </a>
-            {# Добавлено в спринте #}
-      
-            {% comment %}
-            Меню - список пунктов со стандартными классами Bootsrap.
-            Класс nav-pills нужен для выделения активных пунктов 
-            {% endcomment %}
+{% comment %}
+Внутри тега {% with %} переменная view_short_name - 
+это синоним для request.resolver_match.view_name
+{% endcomment %}
 
-            {% comment %}
-            Внутри тега {% with %} переменная view_name - 
-            это синоним для request.resolver_match.view_name
-            {% endcomment %}
+<nav class="navbar navbar-light" style="background-color: lightskyblue">
+  <div class="container">
+    <a class="navbar-brand" href="{% url 'posts:index' %}">
+      <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
+      <!-- тег span используется для добавления нужных стилей отдельным участкам текста -->
+      <span style="color:red">Ya</span>tube
+    </a>
+    {# Добавлено в спринте #}
 
-            {% with request.resolver_match.view_name as view_name %}  
-            <ul class="nav nav-pills">
-              <li class="nav-item"> 
-                <a class="nav-link {% if view_name == 'about:author' %}active{% endif %}"
-                href="{% url 'about:author' %}">Об авторе</a>
-              </li>
-            
-              <li class="nav-item">
-                <a class="nav-link {% if view_name == 'about:tech' %}active{% endif %}" 
-                href="{% url 'about:tech' %}">Технологии</a>
-              </li>
-              {% if user.username %}<!-- Проверка: авторизован ли пользователь? --> 
-              <li class="nav-item"> 
-                <a class="nav-link {% if view_name == 'posts:post_create' %}active{% endif %}" 
-                href="{% url 'posts:post_create' %}">Новая запись</a>
-              </li>
-              <li class="nav-item"> 
-                <a class="nav-link link-light" 
-                href="{% url 'users:password_change' %}">Изменить пароль</a>
-              </li>
-              <li class="nav-item"> 
-                <a class="nav-link link-light {% if view_name == 'users:logout' %}active{% endif %}" 
-                href="{% url 'users:logout' %}">Выйти</a>
-              </li>
-              <li>
-                Пользователь: {{ user.username }}
-              </li>
-              {% else %}
-              <li class="nav-item"> 
-                <a class="nav-link link-light {% if view_name == 'users:login' %}active{% endif %}" 
-                href="{% url 'users:login' %}">Войти</a>
-              </li>
-              <li class="nav-item"> 
-                <a class="nav-link link-light {% if view_name == 'users:signup' %}active{% endif %}" 
-                href="{% url 'users:signup' %}">Регистрация</a>
-              </li>
-              {% endif %}
-              {% endwith %} 
-            </ul>
-            
-            {# Конец добавленого в спринте #}
-          </div>
-        </nav>      
-      </header> 
+    {% with request.resolver_match.view_name as view_short_name %}  
+    {% comment %}
+    Меню - список пунктов со стандартными классами Bootsrap.
+    Класс nav-pills нужен для выделения активных пунктов 
+    {% endcomment %}
+    <ul class="nav nav-pills">
+      <li class="nav-item"> 
+        <a class="nav-link {% if view_short_name  == 'about_namespace:author' %}active{% endif %}" href="{% url 'about_namespace:author' %}">Об авторе</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link {% if view_short_name  == 'about_namespace:tech' %}active{% endif %}" href="{% url 'about_namespace:tech' %}">Технологии</a>
+      </li>
+      {% if user.username  %}<!-- Проверка: авторизован ли пользователь? -->
+      <li class="nav-item"> 
+        <a class="nav-link" href="{% url 'posts:post_create' %}">Новая запись</a><!-- Сделаем в финальном задании спринта -->
+      </li>
+      <li class="nav-item"> 
+        <a class="nav-link link-light" href="{% url 'users:var_password_change' %}">Изменить пароль</a> <!-- Похоже это скипнул)  -->
+      </li>
+      <li class="nav-item"> 
+        <a class="nav-link link-light {% if view_name == 'users:logout' %}active{% endif %}" 
+        href="{% url 'users:logout' %}">Выйти</a>
+      </li>
+      <li>
+        Пользователь: {{ user.username }}
+      </li>
+      {% else %}
+      <li class="nav-item"> 
+        <a class="nav-link link-light {% if view_short_name  == 'users:var_login' %}active{% endif %}" href="{% url 'users:var_login' %}">Войти</a>
+      </li>
+      <li class="nav-item"> 
+        <a class="nav-link link-light {% if view_short_name  == 'users:var_signup' %}active{% endif %}" href="{% url 'users:var_signup' %}">Регистрация</a>
+      </li>
+      {% endif %}
+    </ul>
+    {# Конец добавленого в спринте #}
+  </div>
+</nav>
+{% endwith %} 
