--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -1,64 +1,39 @@
-{% load static %}
+{% extends 'base.html' %}
 
-<!DOCTYPE html> 
-<html lang="ru"> 
-  <head>    
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="../img/fav/fav.ico" type="image">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/fav/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/fav/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <title>      
-      {% if is_edit %}
-      Редактировать пост
-      {% else %}
-      Новый пост
-      {% endif %} 
-    </title>
-  </head>
-  <body>     
-    <header>
-      {% include 'includes/header.html' %}
-    </header>
-    <main>
+{% block title %}{% if is_edit %}Редактировать пост{% else %} Новый пост{% endif %}{% endblock %}
+
+{% block content %}
       <div class="container py-5">
         <div class="row justify-content-center">
           <div class="col-md-8 p-5">
             <div class="card">
               <div class="card-header">       
-                {% if is_edit %}
-                Редактировать пост
-                {% else %}
-                Новый пост
-                {% endif %}            
+                {% if is_edit %}Редактировать пост{% else %}Новый пост{% endif %}
               </div>
-              <div class="card-body">
-                {% if is_edit %}
-                <form method="post" action="{% url 'posts:post_edit' post_id %}">
-                  {% else %}
+              <div class="card-body">       
+                {% if is_edit %} 
+                  <form method="post" action="{% url 'posts:post_edit' post_id %}">
+                {% else %}
                   <form method="post" action="{% url 'posts:post_create' %}">
-                    {% endif %}
+                {% endif %}
+                  {% comment %} {{ form.as_p }} {% endcomment %}
                   {% csrf_token %}     
                   <div class="form-group row my-3 p-3">
-                    <label for="id_text">
+                    <label for="id_zxt">
                       Текст поста                  
                       <span class="required text-danger" >*</span>                  
                     </label>
-                    <textarea name="text" cols="40" rows="10" class="form-control" required id={{ form_class.text }}
+                    <textarea name="text" cols="40" rows="10" class="form-control" required id="{{ form.text }}">
                     </textarea>                
                     <small id="id_text-help" class="form-text text-muted">
                       Текст нового поста
                     </small>                  
                   </div>            
                   <div class="form-group row my-3 p-3">
-                    <label for="{{ form_class.group.id_for_label }}">
+                    <label for="{{ form.group.id_for_label }}">
                       Группа                  
                     </label>
-                    {{ form_class.group }}
+                    {{ form.group }}
                     <small id="id_group-help" class="form-text text-muted">
                       Группа, к которой будет относиться пост
                     </small>
@@ -69,8 +44,8 @@
                         Сохранить
                       {% else %}
                         Добавить
-                      {% endif %}  
-                    </button>
+                      {% endif %}               
+                    </button> 
                   </div>
                 </form>
               </div>
@@ -78,9 +53,4 @@
           </div>
         </div>
       </div>
-    </main>
-    <footer>
-      {% include 'includes/footer.html' %}   
-    </footer>
-  </body>
-</html>
+      {% endblock %} 
