--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -3,30 +3,33 @@
 {% block title %}
   Записи сообщества {{ group }}
 {% endblock %} 
+
 {% block content %}
-      <div class="container">
-        <h1>Лев Толстой – зеркало русской революции.</h1>
-        <p>
+      <!-- класс py-5 создает отступы сверху и снизу блока -->
+      <div class="container py-5">
+        <h1> 
+          {{ group }}
+        </h1>
+        <p> 
           {{ group.description }}
         </p>
         <article>
-          {%for post in page_obj %}
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>      
-          <p> {{ post.text }} </p>
-
-        {% if not forloop.last %}<hr>{% endif %}
-        {% endfor %}
+          {% for post in page_obj %}
+            <ul>
+              <li>
+                Автор: {{ post.author.get_full_name }}
+              </li>
+              <li>
+                Дата публикации: {{ post.pub_date|date:"d E Y" }}
+              </li>
+            </ul>      
+            <p>
+              {{ post.text }}
+            </p>
+            {% if not forloop.last %}<hr>{% endif %}
+          {% endfor %}        
         </article>
-        <!-- под последним постом нет линии -->
-
-        
-        {% include 'posts/includes/paginator.html' %}
+        {# Подтягиваем paginator из шаблона #}
+        {% include 'posts/includes/paginator.html' %} 
       </div>  
-      {% endblock %}
+{% endblock %} 
