--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,33 +1,35 @@
 {% extends 'base.html' %}
 
-{% block title %}
-  Последние обновления на сайте
-{% endblock %} 
+{% block title %}Последние обновления на сайте{% endblock %} 
+
 {% block content %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
-
-      <div class="container">        
+      <div class="container py-5">     
         <h1>Последние обновления на сайте</h1>
         <article>
-          {%for post in page_obj %}
-          <ul>
-            <li>
-              Автор: {{ post.author.get_full_name }}
-            </li>
-            <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
-            </li>
-          </ul>      
-          <p> {{ post.text }} </p>
-          {% if post.group %}
-          <a href="{% url 'posts:group_slug' post.group.slug %}">все записи группы</a>
-          {% endif %}
-        {% if not forloop.last %}<hr>{% endif %}
-        {% endfor %}
+          {% for post in page_obj %}
+            <ul>
+              <li>
+                {# Условие ниже нужно, т.к. через shell насоздавал записей #}
+                Автор: {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{%endif%}
+              </li>
+              <li>
+                Дата публикации: {{ post.pub_date|date:"d E Y" }}
+              </li>
+              <li>
+               На стренице {{ page_obj.paginator.per_page }} записей, всего страниц {{ page_obj.paginator.num_pages }}
+              </li>
+            </ul>      
+            <p>
+              {{ post.text }}
+            </p>
+            {% if post.group %}   
+              <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+            {% endif %} 
+            {% if not forloop.last %}<hr>{% endif %}
+          {% endfor %} 
         </article>
-
-        
-        {% include 'posts/includes/paginator.html' %}
-        <!-- под последним постом нет линии -->
-      </div>  
-{% endblock %}
+        {# Подтягиваем paginator из шаблона #}
+        {% include 'posts/includes/paginator.html' %} 
+      </div>
+{% endblock %} 
