--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,69 +1,35 @@
+{% extends 'base.html' %}
 
+{% block title %}Профайл пользователя {{ author.get_full_name }}{% endblock %} 
 
-<!DOCTYPE html>
-{% load static %}
-<html lang="ru"> 
-  <head>  
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <!-- Подключены иконки, стили и заполенены мета теги -->
-    <title>Профайл пользователя {{ author.get_full_name }} </title> <!--Лев Толстой-->
-  </head>
-  <body>       
-    <header>
-      {% include 'includes/header.html' %}
-      {% comment %} <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="/">
-            <img src="/static/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <span style="color:red">Ya</span>tube
-          </a>
-        </div>
-      </nav>       {% endcomment %}
-    </header>
-    <main>
+{% block content %}
       <div class="container py-5">        
-        <h1>Все посты пользователя {{ author.get_full_name }} </h1> <!--Лев Толстой-->
-        <h3>Всего постов: {{ posts_user.count }} <!-- --> </h3>  
-        {% for post in page_obj %} 
-        <article>
+        <h1>Все посты пользователя {{ author.get_full_name }} </h1>
+        <h3>Всего постов: {{ author.posts_rname.count }} </h3> 
+        {% for post in page_obj %}  
+        <article>          
           <ul>
             <li>
-              Автор: {{ author.get_full_name }}<!--Лев Толстой-->
-              <a href="<!-- -->">все посты пользователя</a>
+              Автор: {{ author.get_full_name }}
+            <li>
+                <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>{# Куда делать ссылку? #}
             </li>
             <li>
-              Дата публикации: {{ post.pub_date|date:"d E Y" }}
+              Дата публикации: {{ post.pub_date|date:"d E Y" }} 
             </li>
           </ul>
-          
           <p>
             {{ post.text }}
-          <!--
-            [Фокшаны.] Еще переходъ до Фокшанъ, во время котораго я ѣхалъ съ 
-            Монго. Человѣкъ пустой, но съ твердыми, хотя и ложными убѣжденіями.
-            Генерал[у] по этому должно быть случаю, угодно было спрашивать о мое
-            мъ здоровьи.
-            Свинья! К[о]вырялъ носъ и ничего не написалъ — вотъ 2 упрека за 
-            нын[ѣшній]     день. Послѣдній упрекъ становится слишкомъ частъ, 
-            хотя походъ и можетъ служить въ немъ отчасти извиненіемъ. 
-            Отношенія мои съ товарищами становятся такъ пріятны, что мнѣ 
-            жалко бросить штабъ. Здоровье кажется (2) лучше. 
-          --> 
           </p>
-          <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
-        </article> 
-        {% if post.group %}      
-        <a href="{% url 'posts:group_slug' post.group.slug %}">все записи группы</a> 
-        {% endif %}
+          <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>{# Тут не понятно как сделать ссылку, итерируемся по пагинатору #}
+        </article>
+          {% if post.group %}
+          <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+          {% else %}
+          <p>ПОСТ НЕ ДОБАВЛЕН В ГРУППУ</p>
+          {% endif %}
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
-        </article>  
-
-        <!-- Здесь подключён паджинатор -->
-        </main>
         {% include 'posts/includes/paginator.html' %}
-    <footer class="border-top text-center py-3">
-      <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>    
-    </footer>
-  </body>
-</html>
+      </div>
+      {% endblock %} 
