Added img to templates

--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -12,14 +12,14 @@
               </div>
               <div class="card-body">       
                 {% if is_edit %} 
-                  <form method="post" action="{% url 'posts:post_edit' post_id %}">
+                  <form method="post" enctype="multipart/form-data" action="{% url 'posts:post_edit' post_id %}">
                 {% else %}
-                  <form method="post" action="{% url 'posts:post_create' %}">
+                  <form method="post" enctype="multipart/form-data" action="{% url 'posts:post_create' %}">
                 {% endif %}
                   {% comment %} {{ form.as_p }} {% endcomment %}
                   {% csrf_token %}     
                   <div class="form-group row my-3 p-3">
-                    <label for="id_zxt">
+                    <label for="id_text">
                       Текст поста                  
                       <span class="required text-danger" >*</span>                  
                     </label>
@@ -37,6 +37,12 @@
                     <small id="id_group-help" class="form-text text-muted">
                       Группа, к которой будет относиться пост
                     </small>
+                  </div>
+                  <div class="form-group row my-3 p-3">
+                    <label for="id_image">
+                      Картинка                      
+                    </label>
+                    <input type="file" name="image" accept="image/*" class="form-control" id="id_image">                      
                   </div>
                   <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-primary">
