--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -28,7 +28,8 @@
       </li>
       {% if user.username  %}<!-- Проверка: авторизован ли пользователь? -->
       <li class="nav-item"> 
-        <a class="nav-link" href="{% url 'posts:post_create' %}">Новая запись</a><!-- Сделаем в финальном задании спринта -->
+        {% comment %} <a class="nav-link" href="{% url 'posts:post_create' %}">Новая запись</a><!-- Сделаем в финальном задании спринта --> {% endcomment %}
+        <a class="nav-link {% if view_short_name  == 'posts:post_create' %}active{% endif %}" href="{% url 'posts:post_create' %}">Новая запись</a>
       </li>
       <li class="nav-item"> 
         <a class="nav-link link-light" href="{% url 'users:var_password_change' %}">Изменить пароль</a> <!-- Похоже это скипнул)  -->
