--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 
 {% block title %}Последние обновления на сайте{% endblock %} 
 
@@ -6,24 +7,32 @@
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">     
         <h1>Последние обновления на сайте</h1>
-        <article>
           {% for post in page_obj %}
-            <ul>
+        
+          <ul>
               <li>
                 {# Условие ниже нужно, т.к. через shell насоздавал записей #}
                 Автор: {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{%endif%}
+                <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
               </li>
               <li>
                 Дата публикации: {{ post.pub_date|date:"d E Y" }}
               </li>
-              <li>
+            </ul>
+            {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+          {% endthumbnail %}
+              {% comment %} <li>
                На стренице {{ page_obj.paginator.per_page }} записей, всего страниц {{ page_obj.paginator.num_pages }}
-              </li>
+              </li> {% endcomment %}
             </ul>      
             <p>
               {{ post.text }}
             </p>
-            {% if post.group %}   
+            <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+            {% if post.group %}  
+        
+        <article> 
               <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
             {% endif %} 
             {% if not forloop.last %}<hr>{% endif %}
