--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,12 +1,9 @@
 
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <!-- Подключены иконки, стили и заполенены мета теги -->
-    <title>Пост {{ post.text|slice:30 }}</title>
-  </head>
-  <body>
-    <header>
+{% extends 'base.html' %}
+{% load thumbnail %}
+{% block title %}Пост {{ post.text|slice:30 }}{% endblock %}
+
+    {% comment %} <header>
       <nav class="navbar navbar-light" style="background-color: lightskyblue">
         <div class="container">
           <a class="navbar-brand" href="/">
@@ -15,8 +12,8 @@
           </a>
         </div>
       </nav>      
-    </header>
-    <main>
+    </header> {% endcomment %}
+{% block content %}
       <div class="row">
         <aside class="col-12 col-md-3">
           <ul class="list-group list-group-flush">
@@ -47,15 +44,25 @@
             </li>
           </ul>
         </aside>
-        <article class="col-12 col-md-9">
+          <article class="col-12 col-md-9">
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+          {% endthumbnail %}
+          {% comment %} {% thumbnail item.image "500x500" crop="center" upscale=True as im %}
+            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+          {% endthumbnail %} {% endcomment %}
+          <p>{{ post.text }}</p>
+          <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+          {% if post.author == request_user %}
+          <a class="btn btn-primary" href="{% url 'posts:post_edit' post_id %}">
+            редактировать запись
+          {% endif %}
+          </a> 
+        </article>
+        {% comment %} <article class="col-12 col-md-9">
           <p>
             {{ post.text }}
           </p>
-        </article>
+        </article> {% endcomment %}
       </div> 
-    </main>
-    <footer class="border-top text-center py-3">
-      <p>© {{ key_year }} Copyright <span style="color:red">Ya</span>tube</p>
-    </footer>
-  </body>
-</html> 
+{% endblock %} 
