--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -59,6 +59,7 @@
           {% endif %}
           </a> 
         </article>
+        {% include 'posts/includes/comment.html' %} 
         {% comment %} <article class="col-12 col-md-9">
           <p>
             {{ post.text }}
