--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,21 +1,7 @@
+{% extends 'base.html' %}
+{% block title %}Пост {{ post.text|slice:30 }}{% endblock %}
 
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <!-- Подключены иконки, стили и заполенены мета теги -->
-    <title>Пост {{ post.text|slice:30 }}</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-light" style="background-color: lightskyblue">
-        <div class="container">
-          <a class="navbar-brand" href="/">
-            <img src="/static/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
-            <span style="color:red">Ya</span>tube
-          </a>
-        </div>
-      </nav>      
-    </header>
+    {% block content %}
     <main>
       <div class="row">
         <aside class="col-12 col-md-3">
@@ -54,8 +40,4 @@
         </article>
       </div> 
     </main>
-    <footer class="border-top text-center py-3">
-      <p>© {{ key_year }} Copyright <span style="color:red">Ya</span>tube</p>
-    </footer>
-  </body>
-</html> 
+    {% endblock %}
