--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -7,6 +7,8 @@
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">     
         <h1>Последние обновления на сайте</h1>
+        {% load cache %}
+        {% cache 20 index_page %}
           {% for post in page_obj %}
         
           <ul>
@@ -36,7 +38,8 @@
               <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
             {% endif %} 
             {% if not forloop.last %}<hr>{% endif %}
-          {% endfor %} 
+          {% endfor %}
+        {% endcache 20 index_page %}
         </article>
         {# Подтягиваем paginator из шаблона #}
         {% include 'posts/includes/paginator.html' %} 
