--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
 
-{% block title %}Последние обновления на сайте{% endblock %} 
+{% block title %}Посты авторов, на которых вы подписаны{% endblock %} 
 
 {% block content %}
 {% include 'posts/includes/switcher.html' %}
       <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">     
-        <h1>Последние обновления на сайте</h1>
+        <h1>Посты авторов, на которых вы подписаны</h1>
         {% load cache %}
         {% cache 20 index_page %}
           {% for post in page_obj %}
