--- a/yatube/templates/core/403csrf.html
+++ b/yatube/templates/core/403csrf.html
@@ -1,5 +1,6 @@
-# templates/core/403csrf.html
 {% extends "base.html" %}
 {% block content %}
-  <h1>Custom CSRF check error. 403</h1>
-{% endblock %} 
+  <h1>Страница недоступна. Код ошибки 403crsf</h1>
+  <p> Вашему браузеру не удалось создать защищённые файлы куки или получить
+    к ним доступ, чтобы авторизовать вход в вашу учетную запись</p>
+{% endblock %}
