--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% load thumbnail %}
 {% block title %}Пост {{ post.text|slice:30 }}{% endblock %}
@@ -13,10 +12,7 @@
             {% if post.group %}
             <li class="list-group-item">
               Группа: {{ post.group_id  }}
-              {# формируем ссылку на группу, первая часть указывает на шаблон в urls.py вторая - ключи из views.py #}
               <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-              
-              {# Тут сам пост #}
               {{ posts_group }}
             </li>
             {% endif %}
@@ -27,7 +23,6 @@
               Всего постов автора:  <span > {{ post.author.posts_rname.count }} </span>
             </li>
             <li class="list-group-item">
-              {# Посмотреть что тут выходит можно через код страницы #}
               <a href="{% url 'posts:profile' post.author %}">
                 все посты пользователя
               </a>
@@ -38,22 +33,14 @@
           {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
             <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
           {% endthumbnail %}
-          {% comment %} {% thumbnail item.image "500x500" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-          {% endthumbnail %} {% endcomment %}
           <p>{{ post.text }}</p>
           <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
-          {% if post.author == request_user %}
-          <a class="btn btn-primary" href="{% url 'posts:post_edit' post_id %}">
+          {% if post.author == request.user %}
+          <a class="btn btn-primary" href="{% url 'posts:post_edit' post.id %}">
             редактировать запись
           {% endif %}
           </a> 
           {% include 'posts/includes/comment.html' %} 
         </article>
-        {% comment %} <article class="col-12 col-md-9">
-          <p>
-            {{ post.text }}
-          </p>
-        </article> {% endcomment %}
       </div> 
 {% endblock %} 
