--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -1,20 +1,17 @@
 {% load static %}
 
-<!DOCTYPE html> <!-- Используется html 5 версии -->
-<html lang="ru"> <!-- Язык сайта - русский -->        
+<!DOCTYPE html>
+<html lang="ru">
   <head>
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
-    <meta charset="utf-8"> <!-- Кодировка сайта -->
-    <!-- Сайт готов работать с мобильными устройствами -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Загружаем фав-иконки -->
     <link rel="icon" href="{% static "img/fav/fav.ico" %}" type="image">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static "img/fav/apple-touch-icon.png" %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static "img/fav/favicon-32x32.png" %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static "img/fav/favicon-16x16.png" %}">
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
-    <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <title>
     {% block title %}
@@ -27,7 +24,6 @@
       {% include 'includes/header.html' %}
     </header>
     <main>
-      {# Весь контент берём из того файла откуда вызван base#}
       {% block content %}
         Контент не подвезли
       {% endblock %}
