--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -16,7 +16,6 @@
                 {% else %}
                   <form method="post" enctype="multipart/form-data" action="{% url 'posts:post_create' %}">
                 {% endif %}
-                  {% comment %} {{ form.as_p }} {% endcomment %}
                   {% csrf_token %}     
                   <div class="form-group row my-3 p-3">
                     <label for="id_text">
@@ -43,6 +42,7 @@
                       Картинка                      
                     </label>
                     <input type="file" name="image" accept="image/*" class="form-control" id="id_image">                      
+                  </div>
                   </div>
                   <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-primary">
