--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,15 +1,12 @@
 {% extends 'base.html' %}
+
 {% load thumbnail %}
-{% block title %}
-  {{ group }}
-{% endblock %} 
+
+{% block title %}{{ group }}{% endblock %} 
 
 {% block content %}
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
       <div class="container py-5">
-        <h1> 
-          Записи сообщества: {{ group }}
-        </h1>
+        <h1> Записи сообщества: {{ group }}</h1>
         <p> 
           {{ group.description }}
         </p>
@@ -18,28 +15,26 @@
             <ul>
               <li>
                 Автор: {{ post.author.get_full_name }}
-                <a href="{% url 'posts:profile' post.author %}">
-                  все посты пользователя
-                </a>
+                <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
               </li>
               <li>
                 Дата публикации: {{ post.pub_date|date:"d E Y" }}
               </li>
-            </ul>      
+            </ul>
             <p>
               {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-              <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-            {% endthumbnail %}
+                <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+              {% endthumbnail %}
+            </p>
+            <p>
               {{ post.text }}
             </p>
-            <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
-            <article> 
-              <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-            </article>
+            <p>
+              <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+            </p>
             {% if not forloop.last %}<hr>{% endif %}
           {% endfor %}        
         </article>
-        {# Подтягиваем paginator из шаблона #}
         {% include 'posts/includes/paginator.html' %} 
       </div>  
 {% endblock %} 
