--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -4,45 +4,40 @@
 {% block title %}Последние обновления на сайте{% endblock %} 
 
 {% block content %}
-{% include 'posts/includes/switcher.html' %}
-      <!-- класс py-5 создает отступы сверху и снизу блока -->
+{% include 'posts/includes/switcher.html' with index=True %}
       <div class="container py-5">     
         <h1>Последние обновления на сайте</h1>
-        {% load cache %}
-        {% cache 20 index_page %}
+        <article>
           {% for post in page_obj %}
-        
-          <ul>
+            <ul>
               <li>
-                {# Условие ниже нужно, т.к. через shell насоздавал записей #}
-                Автор: {% if post.author.get_full_name %}{{ post.author.get_full_name }}{% else %}{{ post.author }}{%endif%}
+                Автор: {{ post.author.get_full_name }}
                 <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
               </li>
               <li>
                 Дата публикации: {{ post.pub_date|date:"d E Y" }}
               </li>
-            </ul>
-            {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-          {% endthumbnail %}
-              {% comment %} <li>
+              <li>
                На стренице {{ page_obj.paginator.per_page }} записей, всего страниц {{ page_obj.paginator.num_pages }}
-              </li> {% endcomment %}
-            </ul>      
+              </li>
+            </ul>
+            <p>
+              {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+              <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+              {% endthumbnail %}
+            </p>
             <p>
               {{ post.text }}
             </p>
-            <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
-            {% if post.group %}  
-        
-        <article> 
+            <p>
+              <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a>
+            </p>
+            {% if post.group %}   
               <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
             {% endif %} 
             {% if not forloop.last %}<hr>{% endif %}
-          {% endfor %}
-        {% endcache 20 index_page %}
+          {% endfor %} 
         </article>
-        {# Подтягиваем paginator из шаблона #}
         {% include 'posts/includes/paginator.html' %} 
       </div>
 {% endblock %} 
