--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,27 +1,33 @@
 {% extends 'base.html' %}
+
 {% load thumbnail %}
 
-{% block title %}{{ author.get_full_name }} профайл пользователя {% endblock %} 
+{% block title %}{{ author.get_full_name }} профайл пользователя{% endblock %} 
 
 {% block content %}
-      <div  class="mb-5" class="container py-5">        
-        <h1>Все посты пользователя {{ author.get_full_name }} </h1>
-        <h3>Всего постов: {{ author.posts_rname.count }} </h3> 
-        {% if following %}
-        <a
-          class="btn btn-lg btn-light"
-          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-        >
-          Отписаться
-        </a>
-      {% else %}
-          <a
-            class="btn btn-lg btn-primary"
-            href="{% url 'posts:profile_follow' author.username %}" role="button"
-          >
-            Подписаться
-          </a>
-       {% endif %}
+      <div class="container py-5">
+        <div class="mb-5">
+          <h1>Все посты пользователя {{ author.get_full_name }}</h1>
+          <h3>Всего постов: {{ posts_count }}</h3>
+          {% if author != request.user %}       
+          {% if following %}
+            <a
+              class="btn btn-lg btn-light"
+              href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+            >
+              Отписаться
+            </a>
+          {% else %}
+              <a
+                class="btn btn-lg btn-primary"
+                href="{% url 'posts:profile_follow' author.username %}" role="button"
+              >
+                Подписаться
+              </a>
+           {% endif %}
+           {% endif %}
+        </div>
+
         {% for post in page_obj %}  
         <article>          
           <ul>
@@ -29,18 +35,20 @@
               Дата публикации: {{ post.pub_date|date:"d E Y" }} 
             </li>
           </ul>
-          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
-            <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-          {% endthumbnail %}
+          <p>
+            {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+              <img class="card-img my-2" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+            {% endthumbnail %}
+          </p>
           <p>
             {{ post.text }}
           </p>
-          <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>{# Тут не понятно как сделать ссылку, итерируемся по пагинатору #}
+          <a href="{% url 'posts:post_detail' post.id %}">подробная информация </a>
         </article>
           {% if post.group %}
           <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
           {% else %}
-          <p>Пост не добавлен в группу</p>
+          <p>ПОСТ НЕ ДОБАВЛЕН В ГРУППУ</p>
           {% endif %}
         {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
